[gd_scene load_steps=12 format=3 uid="uid://btat8xpnsae0r"]

[ext_resource type="PackedScene" uid="uid://dq1wltr4x4pn4" path="res://Tiles/tile_map.tscn" id="1_kbku8"]
[ext_resource type="Script" path="res://Maps/Map 6/PathSpawner6.gd" id="2_gn18i"]
[ext_resource type="PackedScene" uid="uid://co1lai0s71k0y" path="res://Maps/Map 6/Map6Path1.tscn" id="3_nljtd"]
[ext_resource type="PackedScene" uid="uid://dkpvpgjrknins" path="res://gen_sprites/my_computer.tscn" id="3_y4o7m"]
[ext_resource type="PackedScene" uid="uid://ckpsi1kvr1cih" path="res://Maps/Map 6/Map6Path.tscn" id="4_7jtc2"]
[ext_resource type="Script" path="res://interface/interface.gd" id="4_qnk17"]
[ext_resource type="PackedScene" uid="uid://cwimywvr3ay2" path="res://interface/health_bar/hbar.tscn" id="5_vg1rh"]
[ext_resource type="PackedScene" uid="uid://bmqj46uvenr0d" path="res://interface/buy_menu/tower_grid.tscn" id="6_v7gk8"]
[ext_resource type="PackedScene" uid="uid://dst2oojr6y3gs" path="res://interface/buy_menu/money_counter/money_counter.tscn" id="7_6ljc2"]
[ext_resource type="PackedScene" uid="uid://cj2a7aykn6l6n" path="res://interface/start_button/start_button.tscn" id="8_unnke"]
[ext_resource type="PackedScene" uid="uid://bpucj61t6rawa" path="res://interface/round_counter/round_counter.tscn" id="9_idb7w"]

[node name="Map 6" type="Node2D"]

[node name="TileMap" parent="." instance=ExtResource("1_kbku8")]
layer_0/tile_data = PackedInt32Array(0, 65536, 4, 1, 65536, 4, 2, 65536, 4, 3, 65536, 4, 4, 65536, 4, 5, 65536, 4, 6, 65536, 4, 7, 65536, 4, 8, 65536, 4, 9, 65536, 4, 10, 65536, 4, 11, 65536, 4, 12, 65536, 4, 13, 65536, 4, 14, 65536, 4, 15, 65536, 4, 16, 65536, 4, 17, 65536, 4, 18, 65536, 4, 19, 65536, 4, 20, 65536, 4, 21, 65536, 4, 22, 65536, 4, 23, 65536, 4, 24, 65536, 4, 25, 65536, 4, 26, 65536, 4, 27, 65536, 4, 28, 65536, 4, 29, 65536, 4, 30, 65536, 4, 31, 65536, 4, 32, 65536, 4, 33, 65536, 4, 34, 65536, 4, 35, 65536, 4, 36, 65536, 4, 37, 65536, 4, 38, 65536, 4, 39, 65536, 4, 65575, 65536, 4, 131111, 65536, 4, 196647, 65536, 4, 262183, 65536, 4, 327719, 65536, 4, 393255, 65536, 4, 458791, 65536, 4, 524327, 65536, 4, 589863, 65536, 4, 655399, 65536, 4, 720935, 65536, 4, 786471, 65536, 4, 852007, 65536, 4, 917543, 65536, 4, 983079, 65536, 4, 1048615, 65536, 4, 1114151, 65536, 4, 1179687, 65536, 4, 1245223, 65536, 4, 1310759, 65536, 4, 1376295, 65536, 4, 1441831, 65536, 4, 1507367, 65536, 4, 1507366, 65536, 4, 1507365, 65536, 4, 1507364, 65536, 4, 1507363, 65536, 4, 1507362, 65536, 4, 1507361, 65536, 4, 1507360, 65536, 4, 1507359, 65536, 4, 1507358, 65536, 4, 1507357, 65536, 4, 1507356, 65536, 4, 1507355, 65536, 4, 1507354, 65536, 4, 1507353, 65536, 4, 1507352, 65536, 4, 1507351, 65536, 4, 1507350, 65536, 4, 1507349, 65536, 4, 1507348, 65536, 4, 1507347, 65536, 4, 1507346, 65536, 4, 1507345, 65536, 4, 1507344, 65536, 4, 1507343, 65536, 4, 1507342, 65536, 4, 1507341, 65536, 4, 1507340, 65536, 4, 1507339, 65536, 4, 1507338, 65536, 4, 1507337, 65536, 4, 1507336, 65536, 4, 1507335, 65536, 4, 1507334, 65536, 4, 1507333, 65536, 4, 1507332, 65536, 4, 1507331, 65536, 4, 1507330, 65536, 4, 1507329, 65536, 4, 1507328, 65536, 4, 1441792, 65536, 4, 1376256, 65536, 4, 1310720, 65536, 4, 1245184, 65536, 4, 1179648, 65536, 4, 1114112, 65536, 4, 1048576, 65536, 4, 983040, 65536, 4, 917504, 65536, 4, 851968, 65536, 4, 786432, 65536, 4, 720896, 65536, 4, 655360, 65536, 4, 589824, 65536, 4, 524288, 65536, 4, 458752, 65536, 4, 393216, 65536, 4, 327680, 65536, 4, 262144, 65536, 4, 196608, 65536, 4, 131072, 65536, 4, 65536, 65536, 4, 196614, 65536, 4, 262150, 65536, 4, 327686, 65536, 4, 393222, 65536, 4, 458758, 65536, 4, 589830, 65536, 4, 655366, 65536, 4, 720902, 65536, 4, 786438, 65536, 4, 851974, 65536, 4, 851975, 65536, 4, 851976, 65536, 4, 851977, 65536, 4, 786441, 65536, 4, 720905, 262144, 4, 655369, 0, 3, 655370, 262144, 4, 589834, 0, 3, 589835, 262144, 4, 524300, 262144, 4, 524301, 65536, 4, 458765, 65536, 4, 393229, 65536, 4, 327693, 65536, 4, 327694, 65536, 4, 262158, 65536, 4, 262159, 65536, 4, 262160, 65536, 4, 786447, 262144, 4, 851983, 65536, 4, 917519, 65536, 4, 983055, 65536, 4, 1048591, 65536, 4, 1114127, 65536, 4, 1179664, 65536, 4, 1179665, 65536, 4, 1245201, 65536, 4, 1245202, 65536, 4, 1310738, 65536, 4, 1310752, 65536, 4, 1310753, 65536, 4, 1310754, 65536, 4, 1310755, 65536, 4, 1245219, 65536, 4, 786467, 65536, 4, 720931, 65536, 4, 65542, 65536, 4, 131078, 65536, 4, 524294, 65536, 4, 65541, 65536, 4, 131077, 65536, 4, 196613, 65536, 4, 262149, 65536, 4, 327685, 65536, 4, 393221, 65536, 4, 458757, 65536, 4, 524293, 65536, 4, 589829, 65536, 4, 655365, 65536, 4, 720901, 65536, 4, 786437, 65536, 4, 851973, 65536, 4, 917510, 65536, 4, 917511, 65536, 4, 917512, 65536, 4, 196631, 262144, 4, 196632, 65536, 4, 196633, 65536, 4, 196634, 65536, 4, 196635, 65536, 4, 196636, 65536, 4, 196637, 65536, 4, 196638, 65536, 4, 196639, 65536, 4, 196640, 65536, 4, 196641, 65536, 4, 196642, 65536, 4, 196643, 65536, 4, 262179, 65536, 4, 262178, 65536, 4, 262177, 65536, 4, 262176, 65536, 4, 262175, 65536, 4, 262174, 65536, 4, 262173, 65536, 4, 262172, 65536, 4, 262171, 65536, 4, 262170, 65536, 4, 262169, 65536, 4, 262168, 65536, 4, 262167, 65536, 4, 851978, 65536, 4, 786442, 65536, 4, 720906, 65536, 4, 655371, 65536, 4, 589836, 65536, 4, 524299, 0, 3, 458764, 0, 4, 458766, 65536, 4, 393230, 65536, 4, 262162, 65536, 4, 262161, 65536, 4, 327697, 65536, 4, 327698, 65536, 4, 393233, 65536, 4, 458769, 65536, 4, 524305, 65536, 4, 393234, 65536, 4, 458770, 65536, 4, 524306, 65536, 4, 589842, 65536, 4, 589841, 65536, 4, 655377, 65536, 4, 655378, 65536, 4, 720913, 65536, 4, 720912, 262144, 4, 720914, 65536, 4, 786449, 65536, 4, 786448, 65536, 4, 851984, 65536, 4, 917520, 65536, 4, 983056, 65536, 4, 1048592, 65536, 4, 1114128, 65536, 4, 1114129, 65536, 4, 1179666, 65536, 4, 1245203, 65536, 4, 1310739, 65536, 4, 1310740, 65536, 4, 1310741, 65536, 4, 1245204, 65536, 4, 1245205, 65536, 4, 1245206, 65536, 4, 1245207, 65536, 4, 1245208, 65536, 4, 1245209, 65536, 4, 1245210, 65536, 4, 1245211, 65536, 4, 1245212, 65536, 4, 1245213, 65536, 4, 1245214, 65536, 4, 1245215, 65536, 4, 1310743, 65536, 4, 1310742, 65536, 4, 1310744, 65536, 4, 1310745, 65536, 4, 1310746, 65536, 4, 1310747, 65536, 4, 1310748, 65536, 4, 1310749, 65536, 4, 1310750, 65536, 4, 1310751, 65536, 4, 1245216, 65536, 4, 1245217, 65536, 4, 1245218, 65536, 4, 1179683, 65536, 4, 1114147, 65536, 4, 1048611, 65536, 4, 1048610, 65536, 4, 1048609, 65536, 4, 1048608, 65536, 4, 1048607, 65536, 4, 1048606, 65536, 4, 1048605, 65536, 4, 1048604, 65536, 4, 983068, 65536, 4, 917532, 65536, 4, 851996, 65536, 4, 1310756, 196608, 3, 1245220, 65536, 4, 1179684, 65536, 4, 1114148, 65536, 4, 1048612, 65536, 4, 983076, 196608, 4, 983075, 65536, 4, 983074, 65536, 4, 983073, 65536, 4, 983072, 65536, 4, 983071, 65536, 4, 983070, 65536, 4, 983069, 65536, 4, 786460, 65536, 4, 786461, 65536, 4, 786462, 65536, 4, 786463, 65536, 4, 786464, 65536, 4, 786465, 65536, 4, 786466, 65536, 4, 720930, 65536, 4, 720929, 65536, 4, 720928, 65536, 4, 720927, 65536, 4, 720926, 65536, 4, 720925, 65536, 4, 720924, 65536, 4, 786468, 196608, 3, 720932, 65536, 4, 655396, 65536, 4, 589860, 65536, 4, 524324, 65536, 4, 524323, 65536, 4, 720923, 262144, 4, 786459, 65536, 4, 851995, 65536, 4, 917531, 65536, 4, 983067, 65536, 4, 1048603, 262144, 3, 524322, 65536, 4, 524321, 65536, 4, 524320, 65536, 4, 524319, 65536, 4, 524318, 65536, 4, 524317, 65536, 4, 524316, 65536, 4, 524315, 65536, 4, 524314, 65536, 4, 524313, 65536, 4, 524312, 65536, 4, 524311, 262144, 3, 458775, 65536, 4, 393239, 65536, 4, 327703, 65536, 4, 327704, 65536, 4, 393240, 65536, 4, 458776, 65536, 4, 458777, 65536, 4, 458778, 65536, 4, 458779, 65536, 4, 458780, 65536, 4, 458781, 65536, 4, 458782, 65536, 4, 458783, 65536, 4, 458784, 65536, 4, 458785, 65536, 4, 458786, 65536, 4, 458787, 65536, 4, 458788, 196608, 4, 589859, 65536, 4, 655395, 65536, 4, 196623, 65536, 4, 196624, 65536, 4, 196625, 65536, 4, 393228, 0, 4, 458763, 65536, 7, 524298, 65536, 7, 589833, 65536, 7, 65540, 0, 4, 131076, 0, 4, 196612, 0, 4, 262148, 0, 4, 327684, 0, 4, 393220, 0, 4, 458756, 0, 4, 524292, 0, 4, 589828, 0, 4, 655364, 0, 4, 720900, 0, 4, 786436, 0, 4, 851972, 0, 4, 917509, 262144, 3, 983046, 65536, 5, 983045, 0, 5, 917508, 0, 5, 983047, 65536, 5, 983048, 65536, 5, 983049, 65536, 5, 917513, 65536, 4, 851979, 196608, 3, 786443, 65536, 4, 786444, 196608, 3, 720907, 65536, 4, 720908, 65536, 4, 720909, 196608, 3, 655372, 65536, 4, 655373, 65536, 4, 655374, 196608, 3, 589837, 65536, 4, 589838, 65536, 4, 524302, 65536, 4, 786439, 196608, 4, 786440, 262144, 4, 720903, 131072, 4, 65543, 131072, 4, 131079, 131072, 4, 196615, 131072, 4, 262151, 131072, 4, 327687, 131072, 4, 393223, 131072, 4, 458759, 131072, 4, 524295, 131072, 4, 589831, 131072, 4, 655367, 131072, 4, 983050, 131072, 5, 917515, 131072, 5, 851980, 131072, 5, 786445, 131072, 5, 720910, 131072, 5, 720904, 0, 3, 655368, 65536, 7, 589832, 65536, 7, 524296, 65536, 7, 524297, 65536, 7, 458761, 65536, 7, 327692, 0, 4, 327695, 196608, 3, 327696, 262144, 3, 393232, 0, 4, 458768, 0, 4, 524304, 0, 4, 589840, 0, 4, 655376, 0, 4, 720911, 0, 3, 262157, 65536, 4, 262156, 0, 4, 196621, 262144, 4, 196622, 65536, 4, 131086, 65536, 3, 131087, 65536, 3, 131085, 0, 3, 196620, 0, 3, 131088, 65536, 3, 131089, 65536, 3, 851982, 0, 4, 786446, 0, 3, 851985, 65536, 4, 851986, 196608, 3, 917522, 131072, 5, 917521, 196608, 3, 786450, 65536, 4, 786451, 131072, 4, 851987, 131072, 5, 720915, 131072, 4, 983057, 131072, 4, 655379, 131072, 4, 589843, 131072, 4, 524307, 131072, 4, 458771, 131072, 4, 393235, 131072, 4, 327699, 131072, 4, 262163, 131072, 4, 196626, 196608, 4, 196627, 131072, 3, 131090, 131072, 3, 917518, 0, 4, 983054, 0, 4, 1048590, 0, 4, 1114126, 0, 4, 1179663, 262144, 3, 1179662, 0, 5, 1245200, 262144, 3, 1245199, 0, 5, 1310737, 262144, 3, 1310736, 0, 5, 1376274, 65536, 5, 1376273, 0, 5, 1048593, 196608, 4, 1048594, 131072, 3, 1114130, 196608, 4, 1114131, 131072, 3, 1179667, 196608, 4, 1179668, 65536, 3, 1376275, 65536, 5, 1376276, 65536, 5, 1376277, 65536, 5, 1376278, 65536, 5, 1376279, 65536, 5, 1376280, 65536, 5, 1376281, 65536, 5, 1376282, 65536, 5, 1376283, 65536, 5, 1376284, 65536, 5, 1376285, 65536, 5, 1376286, 65536, 5, 1376287, 65536, 5, 1376288, 65536, 5, 1376289, 65536, 5, 1376290, 65536, 5, 1376291, 65536, 5, 1376292, 131072, 5, 1310757, 131072, 5, 1179669, 65536, 3, 1179670, 65536, 3, 1179671, 65536, 3, 1179672, 65536, 3, 1179673, 65536, 3, 1179674, 65536, 3, 1179675, 65536, 3, 1179676, 65536, 3, 1179677, 65536, 3, 1179678, 65536, 3, 1179679, 65536, 3, 1179680, 65536, 3, 1179681, 65536, 3, 1179682, 262144, 4, 1114146, 262144, 3, 1114145, 65536, 5, 1114144, 65536, 5, 1114143, 65536, 5, 1114142, 65536, 5, 1114141, 65536, 5, 1114140, 65536, 5, 1114139, 0, 5, 1048602, 0, 5, 1245221, 131072, 4, 1179685, 131072, 4, 1114149, 131072, 4, 1048613, 131072, 4, 983077, 131072, 3, 786469, 131072, 5, 852004, 131072, 5, 720933, 131072, 4, 655397, 131072, 4, 589861, 131072, 4, 524325, 131072, 4, 458789, 131072, 3, 262180, 131072, 4, 327716, 131072, 5, 327715, 65536, 5, 196644, 131072, 4, 327714, 65536, 5, 327713, 65536, 5, 327712, 65536, 5, 327711, 65536, 5, 327710, 65536, 5, 327709, 65536, 5, 327708, 65536, 5, 327707, 65536, 5, 327706, 65536, 5, 393241, 196608, 4, 393242, 65536, 3, 327705, 196608, 3, 589858, 262144, 3, 655394, 262144, 4, 589857, 65536, 5, 655393, 65536, 3, 655392, 65536, 3, 655391, 65536, 3, 655390, 65536, 3, 655389, 65536, 3, 655388, 65536, 3, 655387, 0, 3, 917533, 196608, 4, 917534, 65536, 3, 851997, 196608, 3, 851998, 65536, 5, 917535, 65536, 3, 917536, 65536, 3, 917537, 65536, 3, 917538, 65536, 3, 917539, 65536, 3, 917540, 131072, 3, 851999, 65536, 5, 852000, 65536, 5, 852001, 65536, 5, 852002, 65536, 5, 852003, 65536, 5, 589856, 65536, 5, 589855, 65536, 5, 589854, 65536, 5, 589853, 65536, 5, 589852, 65536, 5, 589851, 65536, 5, 655386, 65536, 7, 589850, 65536, 5, 589849, 65536, 5, 589848, 65536, 5, 589847, 0, 5, 524310, 0, 5, 196630, 0, 3, 262166, 0, 4, 131095, 0, 3, 327702, 0, 4, 393238, 0, 4, 458774, 0, 4, 131096, 65536, 3, 131097, 65536, 3, 131098, 65536, 3, 131099, 65536, 3, 131100, 65536, 3, 131101, 65536, 3, 131102, 65536, 3, 131103, 65536, 3, 131104, 65536, 3, 131105, 65536, 3, 131106, 65536, 3, 131107, 65536, 3, 131108, 131072, 3, 393243, 65536, 3, 393244, 65536, 3, 393245, 65536, 3, 393246, 65536, 3, 393247, 65536, 3, 393248, 65536, 3, 393249, 65536, 3, 393250, 65536, 3, 393251, 65536, 3, 393252, 131072, 3, 720922, 0, 3, 786458, 0, 4, 851994, 0, 4, 917530, 0, 4, 983066, 0, 4, 1048601, 65536, 7, 983065, 65536, 7, 1376267, 65536, 7, 1310731, 65536, 7, 1245195, 65536, 7, 1179659, 65536, 7, 1114123, 65536, 7, 1048587, 65536, 7, 983051, 65536, 7, 983052, 65536, 7, 917516, 65536, 7, 917517, 65536, 7, 851981, 65536, 7, 983053, 65536, 7, 1048589, 65536, 7, 1048588, 65536, 7, 1114124, 65536, 7, 1179660, 65536, 7, 1245196, 65536, 7, 1310732, 65536, 7, 1376268, 65536, 7, 1441804, 65536, 7, 1441803, 65536, 7, 1441802, 65536, 7, 1376266, 65536, 7, 1310730, 65536, 7, 1245194, 65536, 7, 1179658, 65536, 7, 1114122, 65536, 7, 1048586, 65536, 7, 1048585, 65536, 7, 1048584, 65536, 7, 1048583, 65536, 7, 1048582, 65536, 7, 1048581, 65536, 7, 1048580, 65536, 7, 983044, 65536, 7, 983043, 65536, 7, 917507, 65536, 7, 851971, 65536, 7, 786435, 65536, 7, 720899, 65536, 7, 655363, 65536, 7, 589827, 65536, 7, 524291, 65536, 7, 458755, 65536, 7, 393219, 65536, 7, 327683, 65536, 7, 262147, 65536, 7, 196611, 65536, 7, 131075, 65536, 7, 65539, 65536, 7, 65538, 65536, 7, 65537, 65536, 7, 131073, 65536, 7, 196609, 65536, 7, 262145, 65536, 7, 327681, 65536, 7, 393217, 65536, 7, 458753, 65536, 7, 524289, 65536, 7, 589825, 65536, 7, 655361, 65536, 7, 720897, 65536, 7, 786433, 65536, 7, 851969, 65536, 7, 917505, 65536, 7, 983041, 65536, 7, 1048577, 65536, 7, 1114113, 65536, 7, 1179649, 65536, 7, 1245185, 65536, 7, 1310721, 65536, 7, 1376257, 65536, 7, 1441793, 65536, 7, 1441794, 65536, 7, 1376258, 65536, 7, 1310722, 65536, 7, 1245186, 65536, 7, 1179650, 65536, 7, 1114114, 65536, 7, 1048578, 65536, 7, 983042, 65536, 7, 917506, 65536, 7, 851970, 65536, 7, 786434, 65536, 7, 720898, 65536, 7, 655362, 65536, 7, 589826, 65536, 7, 524290, 65536, 7, 458754, 65536, 7, 393218, 65536, 7, 327682, 65536, 7, 262146, 65536, 7, 196610, 65536, 7, 131074, 65536, 7, 1048579, 65536, 7, 1114115, 65536, 7, 1179651, 65536, 7, 1245187, 65536, 7, 1310723, 65536, 7, 1376259, 65536, 7, 1441795, 65536, 7, 1441796, 65536, 7, 1376260, 65536, 7, 1310724, 65536, 7, 1245188, 65536, 7, 1179652, 65536, 7, 1114116, 65536, 7, 1114117, 65536, 7, 1179653, 65536, 7, 1245189, 65536, 7, 1310725, 65536, 7, 1376261, 65536, 7, 1441797, 65536, 7, 1441798, 65536, 7, 1376262, 65536, 7, 1310726, 65536, 7, 1245190, 65536, 7, 1179654, 65536, 7, 1114118, 65536, 7, 1114119, 65536, 7, 1179655, 65536, 7, 1245191, 65536, 7, 1310727, 65536, 7, 1376263, 65536, 7, 1441799, 65536, 7, 1441800, 65536, 7, 1376264, 65536, 7, 1310728, 65536, 7, 1245192, 65536, 7, 1179656, 65536, 7, 1114120, 65536, 7, 1114121, 65536, 7, 1179657, 65536, 7, 1245193, 65536, 7, 1310729, 65536, 7, 1376265, 65536, 7, 1441801, 65536, 7, 1441805, 65536, 7, 1376269, 65536, 7, 1310733, 65536, 7, 1245197, 65536, 7, 1179661, 65536, 7, 1114125, 65536, 7, 1245198, 65536, 7, 1310734, 65536, 7, 1376270, 65536, 7, 1441806, 65536, 7, 1441807, 65536, 7, 1376271, 65536, 7, 1310735, 65536, 7, 1376272, 65536, 7, 1441808, 65536, 7, 1441809, 65536, 7, 1441810, 65536, 7, 1441811, 65536, 7, 1441812, 65536, 7, 1441813, 65536, 7, 1441814, 65536, 7, 1441815, 65536, 7, 1441816, 65536, 7, 1441817, 65536, 7, 1441818, 65536, 7, 1441819, 65536, 7, 1441820, 65536, 7, 1441821, 65536, 7, 1441822, 65536, 7, 1441823, 65536, 7, 1441824, 65536, 7, 1441825, 65536, 7, 1441826, 65536, 7, 1441827, 65536, 7, 1441828, 65536, 7, 1441829, 65536, 7, 1376293, 65536, 7, 1376294, 65536, 7, 1310758, 65536, 7, 1245222, 65536, 7, 1179686, 65536, 7, 1114150, 65536, 7, 1048614, 65536, 7, 983078, 65536, 7, 917542, 65536, 7, 852006, 65536, 7, 786470, 65536, 7, 720934, 65536, 7, 655398, 65536, 7, 589862, 65536, 7, 524326, 65536, 7, 458790, 65536, 7, 393254, 65536, 7, 327718, 65536, 7, 262182, 65536, 7, 196646, 65536, 7, 131110, 65536, 7, 65574, 65536, 7, 65573, 65536, 7, 65572, 65536, 7, 65571, 65536, 7, 65570, 65536, 7, 65569, 65536, 7, 65568, 65536, 7, 65567, 65536, 7, 65566, 65536, 7, 65565, 65536, 7, 65564, 65536, 7, 65563, 65536, 7, 65562, 65536, 7, 65561, 65536, 7, 65560, 65536, 7, 65559, 65536, 7, 65558, 65536, 7, 65557, 65536, 7, 65556, 65536, 7, 65555, 65536, 7, 65554, 65536, 7, 65553, 65536, 7, 65552, 65536, 7, 65551, 65536, 7, 65550, 65536, 7, 65549, 65536, 7, 65548, 65536, 7, 65547, 65536, 7, 65546, 65536, 7, 65545, 65536, 7, 65544, 65536, 7, 131080, 65536, 7, 196616, 65536, 7, 262152, 65536, 7, 327688, 65536, 7, 393224, 65536, 7, 458760, 65536, 7, 393225, 65536, 7, 327689, 65536, 7, 262153, 65536, 7, 196617, 65536, 7, 131081, 65536, 7, 131082, 65536, 7, 196618, 65536, 7, 262154, 65536, 7, 327690, 65536, 7, 393226, 65536, 7, 458762, 65536, 7, 393227, 65536, 7, 327691, 65536, 7, 262155, 65536, 7, 196619, 65536, 7, 131083, 65536, 7, 131084, 65536, 7, 131091, 65536, 7, 131092, 65536, 7, 196628, 65536, 7, 262164, 65536, 7, 327700, 65536, 7, 393236, 65536, 7, 458772, 65536, 7, 524308, 65536, 7, 589844, 65536, 7, 655380, 65536, 7, 720916, 65536, 7, 786452, 65536, 7, 851988, 65536, 7, 917524, 65536, 7, 917523, 65536, 7, 983059, 65536, 7, 983058, 65536, 7, 1048595, 65536, 7, 1048596, 65536, 7, 983060, 65536, 7, 983061, 65536, 7, 917525, 65536, 7, 851989, 65536, 7, 786453, 65536, 7, 720917, 65536, 7, 655381, 65536, 7, 589845, 65536, 7, 524309, 65536, 7, 458773, 65536, 7, 393237, 65536, 7, 327701, 65536, 7, 262165, 65536, 7, 196629, 65536, 7, 131093, 65536, 7, 131094, 65536, 7, 589846, 65536, 7, 655382, 65536, 7, 720918, 65536, 7, 786454, 65536, 7, 851990, 65536, 7, 917526, 65536, 7, 983062, 65536, 7, 1048598, 65536, 7, 1048597, 65536, 7, 1114133, 65536, 7, 1114132, 65536, 7, 1114134, 65536, 7, 1114135, 65536, 7, 1048599, 65536, 7, 983063, 65536, 7, 917527, 65536, 7, 851991, 65536, 7, 786455, 65536, 7, 720919, 65536, 7, 655383, 65536, 7, 655384, 65536, 7, 720920, 65536, 7, 786456, 65536, 7, 851992, 65536, 7, 917528, 65536, 7, 983064, 65536, 7, 1048600, 65536, 7, 1114136, 65536, 7, 1114137, 65536, 7, 1114138, 65536, 7, 917529, 65536, 7, 851993, 65536, 7, 786457, 65536, 7, 720921, 65536, 7, 655385, 65536, 7, 131109, 65536, 7, 196645, 65536, 7, 262181, 65536, 7, 327717, 65536, 7, 393253, 65536, 7, 852005, 65536, 7, 917541, 65536, 7, 1441830, 65536, 7, 917514, 196608, 3, 589839, 131072, 4, 524303, 131072, 4, 458767, 131072, 4, 393231, 131072, 4, 655375, 131072, 5)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 1)
anchor_mode = 0
zoom = Vector2(0.45, 0.422)

[node name="PathSpawner" type="Node2D" parent="."]
script = ExtResource("2_gn18i")

[node name="Timer" type="Timer" parent="PathSpawner"]
wait_time = 0.5

[node name="onePath" parent="PathSpawner" instance=ExtResource("3_nljtd")]

[node name="zeroPath" parent="PathSpawner" instance=ExtResource("4_7jtc2")]

[node name="my_computer" parent="." instance=ExtResource("3_y4o7m")]
position = Vector2(2225, 244)
scale = Vector2(2, 2)

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 71.0
offset_top = 65.0
offset_right = 71.0
offset_bottom = 65.0
scale = Vector2(2, 2)
script = ExtResource("4_qnk17")

[node name="Hbar" parent="Interface" instance=ExtResource("5_vg1rh")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 414.0
offset_top = 0.5
offset_right = 1014.0
offset_bottom = 53.5
grow_horizontal = 2

[node name="buy_grid" parent="Interface" instance=ExtResource("6_v7gk8")]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 8.5
offset_top = 554.0
offset_right = 48.5
offset_bottom = 682.0
grow_horizontal = 1
grow_vertical = 0

[node name="Label" parent="Interface/buy_grid/pointer_button" index="1"]
text = "$40"

[node name="Label" parent="Interface/buy_grid/Arrow_button" index="1"]
text = "$20"

[node name="Label" parent="Interface/buy_grid/cursor_button" index="1"]
offset_left = 42.0
offset_top = 0.0
offset_right = 82.0
offset_bottom = 40.0

[node name="money_counter" parent="Interface" instance=ExtResource("7_6ljc2")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = 580.5
offset_right = 266.0
offset_bottom = 668.5
grow_vertical = 0

[node name="start_button" parent="Interface" instance=ExtResource("8_unnke")]
layout_mode = 1
offset_left = 559.0
offset_top = 313.5
offset_right = 559.0
offset_bottom = 313.5
scale = Vector2(2, 2)

[node name="round_counter" parent="Interface" instance=ExtResource("9_idb7w")]
layout_mode = 0
offset_left = 334.5
offset_top = -2.0
offset_right = 374.5
offset_bottom = 24.0
scale = Vector2(2, 2)

[connection signal="addScore" from="PathSpawner" to="Interface" method="_on_path_spawner_add_score"]
[connection signal="addScore" from="PathSpawner" to="Interface" method="_on_path_spawner_6_add_score"]
[connection signal="roundEnd" from="PathSpawner" to="Interface" method="_on_path_spawner_round_end"]
[connection signal="roundEnd" from="PathSpawner" to="Interface" method="_on_path_spawner_6_round_end"]
[connection signal="timeout" from="PathSpawner/Timer" to="PathSpawner" method="_on_timer_timeout" flags=18]
[connection signal="oneDeath" from="PathSpawner/onePath" to="PathSpawner" method="_on_one_path_one_death" flags=18]
[connection signal="zeroDeath" from="PathSpawner/zeroPath" to="PathSpawner" method="_on_zero_path_zero_death" flags=18]
[connection signal="hp_damage" from="my_computer" to="Interface" method="_on_my_computer_hp_damage"]
[connection signal="damage" from="Interface" to="Interface/Hbar" method="_on_interface_damage" flags=18]
[connection signal="health_changed" from="Interface" to="Interface/Hbar" method="_on_interface_health_changed" flags=18]
[connection signal="roundEnd" from="Interface" to="Interface/start_button" method="_on_interface_round_end" flags=18]
[connection signal="start_round" from="Interface" to="PathSpawner" method="_on_interface_start_round"]
[connection signal="start_round" from="Interface" to="Interface/start_button" method="_on_interface_start_round" flags=18]
[connection signal="ready_button_pressed" from="Interface/start_button" to="Interface" method="_on_start_button_ready_button_pressed" flags=18]

[editable path="Interface/Hbar"]
[editable path="Interface/Hbar/counter"]
[editable path="Interface/buy_grid"]
